Fixed title bar width on mobile to move back-arrow further to the right on single contact view

--- a/join/src/app/contacts/contacts.component.scss
+++ b/join/src/app/contacts/contacts.component.scss
@@ -1309,6 +1309,7 @@ body,
     justify-content: space-between;
     gap: 4rem;
     align-items: flex-start;
+    width: 100%;
   }
 }
 
